--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -67,8 +67,24 @@
 
 [[dependencies]]
   branch = "master"
+  name = "github.com/aws/aws-sdk-go"
+
+[[dependencies]]
+  name = "github.com/go-ini/ini"
+  version = "^1.27.2"
+
+[[dependencies]]
+  name = "github.com/jmespath/go-jmespath"
+  version = "^0.2.2"
+
+[[dependencies]]
+  branch = "master"
   name = "github.com/mitchellh/cli"
 
 [[dependencies]]
   branch = "master"
   name = "golang.org/x/sys"
+
+[[dependencies]]
+  branch = "v2"
+  name = "gopkg.in/yaml.v2"
