Add postgres client

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -83,6 +83,10 @@
 
 [[dependencies]]
   branch = "master"
+  name = "github.com/lib/pq"
+
+[[dependencies]]
+  branch = "master"
   name = "golang.org/x/sys"
 
 [[dependencies]]
